# hex

./: Cargo.toml  rustfmt.toml
crates/hex-asm/: Cargo.toml
crates/hex-asm/benches/: fib.hxa  fib.lua  fib.py  fib_bench.rs
crates/hex-asm/src/: lib.rs  test.hxa
crates/hex-gc/: Cargo.toml
crates/hex-gc/src/: heap.rs  lib.rs  object.rs
crates/hex-mir/: Cargo.toml
crates/hex-runtime/: Cargo.toml
crates/hex-vm/: Cargo.toml  cargo.toml
crates/hex-vm/src/: async_runtime.rs  disassemble.rs  error.rs  extension.rs  extensions.rs  function.rs  heap.rs  host.rs  instruction.rs  interrupt.rs  lib.rs  memory.rs  name.rs  native.rs  object.rs  opcode.rs  program.rs  storage.rs  value.rs  vm.rs
crates/lang-talkscript/: Cargo.toml  cargo.toml  test.tks
crates/lang-talkscript/src/: arena.rs  compiler.rs  lib.rs
crates/lang-talkscript/src/compiler/: ast.rs  codegen.rs  error.rs  lexer.rs  liveness.rs  mir.rs  op.rs  parse_rules.rs  parser.rs  resolver.rs  sema.rs  symbol_table.rs  token.rs  tokens.rs  type_checker.rs  typed_ast.rs
crates/lang-talkscript/src/compiler/sema/: comptime.rs  eval.rs  mod.rs  sema_type.rs  sema_value.rs  type_check.rs  type_engine.rs  typed_ast.rs  types.rs  value.rs
src/: arena.rs  codegen.rs  compiler.rs  lib.rs  mir.rs  ssa_ir.rs  test.tks  vm.rs
src/compiler/: ast.rs  ast_op.rs  codegen.rs  error.rs  lexer.rs  liveness.rs  mir.rs  name_resolver.rs  parse_rules.rs  parser.rs  sema.rs  sema_error.rs  sema_v2.rs  tokens.rs  type_info.rs
src/vm/: async_runtime.rs  function.rs  heap.rs  instruction.rs  memory.rs  object.rs  program.rs
(+22 files in other folders)
