
[package]
name = "hex-vm"
version = "0.1.0"
edition = "2024"
description = "Hex: a register-based virtual machine"

[lib]
name = "hex_vm"
doctest = false

[features]
default = ["std"]
std = ["alloc", "thiserror/std"]
alloc = []

[dependencies]
thiserror = { version = "2.0.18", default-features = false }
